# codenames-cpp-vibecoding

./: .gitignore  README.md
CodeNamesClient/: CMakeLists.txt
CodeNamesClient/include/core/: GameState.h  GameState_2.h  IOCPClient.h  IOCPClient_2.h  Logger.h  PacketHandler.h  PacketHandler_2.h  PacketProtocol.h
CodeNamesClient/include/gui/: ConsoleUtils.h  ConsoleUtils_2.h  GUIManager.h  GameScreen.h  LoginScreen.h  MainScreen.h  ResultScreen.h  SignupScreen.h
CodeNamesClient/src/: main.cpp
CodeNamesClient/src/core/: GameState.cpp  GameState_2.cpp  IOCPClient.cpp  IOCPClient_2.cpp  Logger.cpp  PacketHandler.cpp  PacketHandler_2.cpp
CodeNamesClient/src/gui/: ConsoleUtils.cpp  GUIManager.cpp  GameScreen.cpp  LoginScreen.cpp  MainScreen.cpp  ResultScreen.cpp  SignupScreen.cpp
CodeNamesServer/: CMakeLists.txt  words.txt
CodeNamesServer/include/: DatabaseManager.h  GameManager.h  IMediator.h  IOCPServer.h  NetworkManager.h  PacketProtocol.h  Session.h  SessionManager.h
CodeNamesServer/src/: DatabaseManager.cpp  GameManager.cpp  IOCPServer.cpp  NetworkManager.cpp  Session.cpp  SessionManager.cpp  main.cpp
